import "google/protobuf/empty.proto";

package ns1.testPkg;
syntax = "proto3";

service TestService {
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc ClientStreamGet (stream GetRequest) returns (GetResponse) {}
    rpc ServerStreamGet (GetRequest) returns (stream GetResponse) {}
    rpc BiStreamGet (stream GetRequest) returns (stream GetResponse) {}

    rpc GetEmpty (google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc ClientStreamGetEmpty (stream google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc ServerStreamGetEmpty (google.protobuf.Empty) returns (stream google.protobuf.Empty) {}
    rpc BiStreamGetEmpty (stream google.protobuf.Empty) returns (stream google.protobuf.Empty) {}
}

message Skill {
    string id = 1;
    string path = 2;
}

message GetRequest {
    repeated string ids = 1;
}

message GetResponse {
    repeated Skill skills = 1;
}